<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp"
        android:paddingTop="6dp" >

        <LinearLayout
            android:id="@+id/top_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/widget_header_background"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="6dp" >

            <TextView
                android:id="@+id/widget_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_widget"
                android:textColor="@color/widget_header_text"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/settings_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:contentDescription="@string/settings_widget_colors"
                android:src="@android:drawable/ic_menu_preferences" />

            <ImageButton
                android:id="@+id/refresh_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:contentDescription="@string/action_refresh"
                android:src="@android:drawable/stat_notify_sync" />
        </LinearLayout>

        <ListView
            android:id="@+id/widget_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/top_row"
            android:background="@color/widget_list_background"
            android:divider="@color/widget_divider"
            android:dividerHeight="1px" >
        </ListView>

        <!-- Shown for empty collection due to rv.setEmptyView(R.id.widget_list, R.id.empty_view) being called: -->

        <TextView
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/top_row"
            android:background="@color/widget_empty_view_background"
            android:padding="6dp"
            android:text="@string/msg_refresh_widget_from_app"
            android:textColor="@color/widget_empty_view_text" />
    </RelativeLayout>

</RelativeLayout>